--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@signalwire/js": "^3.29.1",
+    "@signalwire/client": "^1.0.0-dev.202509301919.a518d3b.0",
     "axios": "^1.6.2",
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
